--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,11 @@
-[workspace]
-members = [
-    "auto_impl",
-    "auto_impl_internals"
-]
+[package]
+name = "auto_impl"
+version = "0.1.0"
+authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
+
+[lib]
+proc-macro = true
+
+[dependencies]
+quote = "*"
+syn = { version = "*", features = ["full"] }
