--- a/compile_test/Cargo.toml
+++ b/compile_test/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "auto_impl_internals"
+name = "auto_impl_compile_test"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
 [dependencies]
-quote = "*"
-syn = { version = "*", features = ["full"] }
+auto_impl = { version = "*", path = "../" }
