--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,16 @@
 name = "auto_impl"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
+license = "MIT"
+description = "Automatically implement traits for common smart pointers and closures"
+repository = "https://github.com/KodrAus/auto_impl"
+documentation = "https://docs.rs/auto_impl/"
+keywords = ["plugin"]
+categories = ["development-tools"]
+readme = "README.md"
+
+[badges]
+travis-ci = { repository = "KodrAus/auto_impl" }
 
 [lib]
 proc-macro = true
