--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,6 @@ travis-ci = { repository = "KodrAus/auto_impl" }
 proc-macro = true
 
 [dependencies]
-quote = "~0.3"
-syn = { version = "~0.11", features = ["full"] }
+proc-macro2 = "0.4.6"
+quote = "0.6.3"
+syn = { version = "0.14.4", features = ["full"] }
