--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,4 @@ proc-macro = true
 [dependencies]
 proc-macro2 = { version = "0.4.6", features = ["nightly"] }
 quote = "0.6.3"
-# TODO: remove "extra-traits", it's just for debugging
-syn = { version = "0.14.4", features = ["full", "extra-traits"] }
+syn = { version = "0.14.4", features = ["full"] }
