Improve Travis-CI configuration
- crate is tested with and without 'nightly' feature
- warnings lead to a build failure

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,13 @@ language: rust
 rust:
   - nightly
 
+script:
+  - cargo build --verbose
+  - cargo test --verbose
+  - cargo build --verbose --features=nightly
+  - cargo test --verbose --features=nightly
+
+env:
+  - RUST_FLAGS="--deny warnings"
+
 cache: cargo
