Remove edition-flag from Cargo.toml (it's stabilized now)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,3 @@
-cargo-features = ["edition"]
-
 [package]
 name = "auto_impl"
 version = "0.2.0"
@@ -15,7 +13,7 @@ keywords = ["plugin"]
 categories = ["development-tools"]
 readme = "README.md"
 autotests = true
-edition = '2018'
+edition = "2018"
 
 [badges]
 travis-ci = { repository = "KodrAus/auto_impl" }
