--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = [
     "Ashley Mannix <ashleymannix@live.com.au>",
     "Lukas Kalbertodt <lukas.kalbertodt@gmail.com>",
 ]
-license = "MIT"
+license = "MIT/Apache-2.0"
 description = "Automatically implement traits for common smart pointers and closures"
 repository = "https://github.com/KodrAus/auto_impl"
 documentation = "https://docs.rs/auto_impl/"
