Improve Travis-CI script to build examples on beta
Beta can't run the test suite, but we can at least compile the
examples.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ matrix:
         - cargo test --verbose || travis_terminate 1
     - name: "Build on beta"
       rust: beta
-      script: cargo build --verbose
+      script:
+        - cargo build --verbose
+        - cargo build --verbose --examples
 
 env:
   global:
