--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,16 +7,16 @@ authors = [
 ]
 license = "MIT/Apache-2.0"
 description = "Automatically implement traits for common smart pointers and closures"
-repository = "https://github.com/KodrAus/auto_impl"
+repository = "https://github.com/auto-impl-rs/auto_impl/"
 documentation = "https://docs.rs/auto_impl/"
-keywords = ["plugin"]
-categories = ["development-tools"]
+keywords = ["trait", "impl", "proc-macro", "closure"]
+categories = ["development-tools", "rust-patterns"]
 readme = "README.md"
 autotests = true
 edition = "2018"
 
 [badges]
-travis-ci = { repository = "KodrAus/auto_impl" }
+travis-ci = { repository = "auto-impl-rs/auto_impl" }
 
 
 [lib]
