explicitly build on the latest stable in ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ matrix:
     - name: "Build on beta"
       rust: beta
       script: cargo build --verbose
+    - name: "Build on stable"
+      rust: stable
+      script: cargo build --verbose
 
 env:
   global:
