--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,15 +31,5 @@ quote = "1.0"
 syn = { version = "1.0", features = ["full", "visit", "visit-mut"] }
 
 [dev-dependencies]
-build-plan = "0.1.1"
-libtest-mimic = "0.2.0"
-
-[[test]]
-name = "compile-fail"
-path = "tests/compile-fail.rs"
-harness = false
-
-[[test]]
-name = "compile-pass"
-path = "tests/compile-pass.rs"
-harness = false
+trybuild = "1"
+rustversion = "1"
