--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ nightly = ["proc-macro2/nightly"]
 proc-macro2 = { version = "1.0" }
 quote = "1.0"
 syn = { version = "1.0", features = ["full", "visit", "visit-mut"] }
+proc-macro-error = "0.4.4"
 
 [dev-dependencies]
 trybuild = "1"
