Update MSRV information and add `rust-version` field to `Cargo.toml`
The field is only supported from Rust 1.56 onwards, so there is no real
usage in using this new field. But I specifying it is a good thing, I
think. On older Cargo versions, a small warning is printed and the
field is ignored.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ categories = ["development-tools", "rust-patterns"]
 readme = "README.md"
 autotests = true
 edition = "2018"
+rust-version = "1.37"
 
 
 [lib]
