--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        rust-version: ['stable', 'beta', 'nightly']
+        rust-version: ['stable', 'beta', 'nightly', '1.37']
     steps:
     - uses: actions/checkout@v2
     - uses: actions-rs/toolchain@v1
