--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -2,6 +2,6 @@ unstable_features = true
 
 blank_lines_upper_bound = 3
 format_macro_matchers = true
-merge_imports = true
+imports_granularity="Crate"
 normalize_comments = true
 reorder_impl_items = true
