--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,5 @@ proc-macro-error = "1.0.0"
 
 [dev-dependencies]
 trybuild = "1"
+async-trait = "0.1"
+async-std = { version = "1", features = ["attributes"] }
