--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,10 @@ autotests = true
 edition = "2018"
 rust-version = "1.37"
 
+[workspace]
+members = [
+    "examples/async_await"
+]
 
 [lib]
 proc-macro = true
@@ -28,5 +32,3 @@ proc-macro-error = "1.0.0"
 
 [dev-dependencies]
 trybuild = "1"
-async-trait = "0.1"
-async-std = { version = "1", features = ["attributes"] }
