Edition 2021, bump MSRV, fix Clippy warnings and UI tests for newer rustc

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,24 +12,15 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        rust-version: ['stable', 'beta', 'nightly', '1.37']
+        rust-version: ['stable', 'beta', 'nightly', '1.56']
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions-rs/toolchain@v1
+    - uses: actions/checkout@v3
+    - uses: dtolnay/rust-toolchain@master
       with:
-        profile: minimal
-        toolchain: ${{ matrix.rust-version }}
-        default: true
+        toolchain: stable
+        components: rustfmt, clippy
     - uses: Swatinem/rust-cache@v1
 
-    - name: Build
-      run: cargo build
-    - name: Run tests
-      if: matrix.rust-version != '1.37'
-      run: cargo test --all -- --skip ui_compile_fail
-    - name: Run compile-fail tests
-      if: matrix.rust-version == 'stable'
-      run: cargo test -- ui_compile_fail
-    - name: Run tests (MSRV)
-      if: matrix.rust-version == '1.37'
-      run: cargo test -- --skip ui_compile_fail
+    - run: cargo fmt --all -- --check
+    - run: cargo clippy --workspace --all-features -- -D warnings
+    - run: cargo test --workspace
