--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = [
     "Ashley Mannix <ashleymannix@live.com.au>",
     "Lukas Kalbertodt <lukas.kalbertodt@gmail.com>",
 ]
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 description = "Automatically implement traits for common smart pointers and closures"
 repository = "https://github.com/auto-impl-rs/auto_impl/"
 documentation = "https://docs.rs/auto_impl/"
@@ -13,8 +13,8 @@ keywords = ["trait", "impl", "proc-macro", "closure"]
 categories = ["development-tools", "rust-patterns"]
 readme = "README.md"
 autotests = true
-edition = "2018"
-rust-version = "1.37"
+edition = "2021"
+rust-version = "1.56"
 
 [workspace]
 members = [
