--- a/examples/async_await/Cargo.toml
+++ b/examples/async_await/Cargo.toml
@@ -2,7 +2,8 @@
 name = "auto_impl_async_await_example"
 version = "0.0.0"
 publish = false
-edition = "2018"
+edition = "2021"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 auto_impl = { path = "../../" }
